# technical_sur_2

./: .env  Dockerfile  README.md  alembic.ini  directly-installed.txt  docker-compose.yaml  poetry_added.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_03_01_1136-1f339c24862e_create_products_table.py  2025_03_01_1302-112b92d880c8_create_users_table.py  2025_03_01_1318-3275338efda5_create_posts_table.py  2025_03_01_1422-0254f209e5be_create_profile_table.py  2025_03_03_1146-76ef51f98e96_create_orders_table.py  2025_03_03_1339-ce2896d4ee1c_create_order_product_association_table.py  2025_03_03_1344-f291ead6acb9_create_order_product_association_.py  2025_03_03_1656-562180e3ed19_create_order_product_association_.py  2025_03_03_1750-48caf4fe0964_add_count_column_in_order_product_.py  2025_03_03_1912-e6eeac583a0e_add_item_price_column_in_order_product_.py  2025_03_05_1142-32f572efef3b_add_columns_to_users.py
src/: errors.py  main.py  server_starter.py  settings.py  start_server  start_server.py
src/api_v1/: __init__.py
src/api_v1/auth/: README.md  dependencies.py  schemas.py  utils.py  validators.py  views.py
src/api_v1/demo_auth/: views.py
src/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/users/: crud.py  dependencies.py  views.py
src/config/: app_config.py  swagger_config.py
src/core/: settings.py
src/core/config/: __init__.py  app_config.py  db_config.py  swagger_config.py
src/core/gunicorn/: __init__.py  application.py  (+2 more)
src/users/: crud.py  schemas.py  views.py
src/utils/: temp.py
(+14 files in other folders)
